[package]
name = "display-discovery"
version = "0.1.0"
authors = ["Andrew Gracey"]
edition = "2018"

[dependencies]
akri-discovery-utils = { git = "https://github.com/project-akri/akri", branch = "main", package = "akri-discovery-utils" }
async-trait = "0.1.0"
tokio = { version = "1.0.1", features = ["time", "net", "sync"] }
tonic = { version = "0.5.2", features = ["tls"] }
env_logger = "0.9.0"
log = "0.4"
udev = "0.5"

tokio-stream = { version =  "0.1", features = ["net"] }